# NJUlogin

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
NJUlogin/: QRlogin.py  __init__.py  __main__.py  __version__.py  _base_.py  base.py  pwdLogin.py  sliderCaptcha.py
NJUlogin/captchaOCR/: __init__.py  charsets.py  nju_captcha.onnx  ocr.py  utils.py
NJUlogin/utils/: clear.py  config.py  get_post.py  slider_captcha.py  urls.py
demos/: domitory_electricity.py  test_QRlogin.py  test_export_load.py  test_logout_all.py  test_pwdLogin.py  today_notice.py
test/: test_QRlogin.py  test_export_load.py  test_pwdLogin.py
